Finish adding submodules.

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "submodules/anaphora"]
 	path = submodules/anaphora
 	url = git://github.com/dylan-lang/anaphora.git
+[submodule "submodules/xml-rpc"]
+	path = submodules/xml-rpc
+	url = git://github.com/dylan-lang/xml-rpc.git
