Switch to a thread pool for servicing requests.
Use the concurrency library. Part of this work was done by
Ingo Albrecht (@promovicz).

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "submodules/meta"]
 	path = submodules/meta
 	url = git://github.com/dylan-lang/meta.git
+[submodule "submodules/concurrency"]
+	path = submodules/concurrency
+	url = git://github.com/dylan-foundry/concurrency.git
